--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
 h1 {
-        font-family: 'Carter One', cursive;
+        font-family: 'Carter One';
         font-family: 'Ysabeau Office', sans-serif;
 }
