made web page responsive

--- a/src/style.css
+++ b/src/style.css
@@ -26,3 +26,17 @@ h2 {
 .button {
     padding: 15px;
 }
+
+@media (max-width: 900px) {
+    h1 {
+        font-size: 40px;
+        line-height: 2;
+    }
+    h2 {
+        font-size: 38px;
+    }
+    .hero {
+        padding: 80px 20px;
+    }
+    
+}
