made website compatible with mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -43,5 +43,11 @@ p {
     .hero {
         padding: 80px 20px;
     }
-
+img {
+    display: none;
+}
+.project-decsription {
+    padding: 0;
+        text-align: center;
+}
 }
