--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,46 @@ h3,p {
     padding: 98px 15px;
 }
 
+footer {
+    margin: 60px 0;
+}
+
+footer .contact-box {
+    background: var(--bg-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+
+footer .contact-box p {
+    margin: 0;
+}
+
+footer .contact-box p {
+    margin: 0;
+}
+
+footer .email-link {
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+}
+
+footer .email-link:hover {
+    color: royalblue;
+}
+
+footer .social-links a {
+    margin: 0 20px;
+    padding: 10px 14px;
+    border-radius: 50%;
+    font-size: 18px;
+    transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+    color: royalblue;
+}
+
 h2 {
     font-weight: 200px;
 }
